--- a/Streamlit Code/SAMPLE.env
+++ b/Streamlit Code/SAMPLE.env
@@ -1,2 +1,4 @@
-MNEMONIC = 'YOUR MNEMONIC SEED PHRASE HERE'
+MNEMONIC = 'math project violin all peanut primary gesture huge feed gun practice crunch'
+
+
 
